force-app/main/default/objects/Lilly_User_Tag_Access__c/Lilly_User_Tag_Access__c.object-meta.xml
<CustomObject>
    <label>User Tag Access</label>
    <nameField>
        <displayFormat>UTA-{0000000000}</displayFormat>
        <label>User Tag Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Tag Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>