force-app/main/default/objects/Lilly_User_Tag_Access__c/fields/Lilly_Email__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Email__c</fullName>
    <label>Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>