force-app/main/default/objects/Lilly_User_Tag_Access__c/fields/Lilly_Tag_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Tag_Id__c</fullName>
    <label>Tag Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>