force-app/main/default/objects/Lilly_User_Tag_Access__c/fields/Lilly_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Lilly_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Tag_Access2</relationshipName>
    <type>Lookup</type>
</CustomField>