force-app/main/default/objects/Lilly_User_Tag_Access__c/fields/OfflineUniqueId__c.field-meta.xml
<CustomField>
    <fullName>OfflineUniqueId__c</fullName>
    <label>Offline Unique Id</label>
    <type>TextArea</type>
</CustomField>